last commit for desktop layout

--- a/assets/style.css
+++ b/assets/style.css
@@ -107,11 +107,11 @@ h3 {
     line-height: 22px;
 }
 
-.container {
+.container, .second-container {
     max-width: 1115px;
     height: 100%;
     margin: 0 auto;
-    padding: 0 8px;
+    padding: 0 16px;
 }
 
 .blue-button-anchor {
@@ -442,6 +442,10 @@ ul.header-nav-list li a {
     margin-bottom: 50px;
 }
 
+.projects-img .img-item {
+    text-align: center;
+}
+
 .projects-img .img-item img {
     width: 80%;
     cursor: pointer;
@@ -449,11 +453,191 @@ ul.header-nav-list li a {
 
 /*section Video-about*/
 #video-about {
+    position: relative;
+}
+
+#video-about .container {
+    text-align: center;
+    padding-top: 70px;
+    padding-bottom: 85px;
+    margin-bottom: 85px;
+    border-bottom: 1px solid #E0E0E0;
+}
+
+#video-about .background {
     background: url("./img/video-about-background.png") no-repeat center;
     background-size: cover;
+    width: 100%;
+    height: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+#video-about .section-title h2 {
+    margin-bottom: 30px;
+}
+
+#video-about .section-title p {
+    margin-bottom: 70px;
+}
+
+#video-about .section-video-wrap {
+    width: 65%;
+    height: 20rem;
+    margin: 0 auto;
+}
+
+#video-about .section-video-wrap .play-button-wrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    background: url("./img/video-about.png") no-repeat center;
+    background-size: auto;
+    background-size: auto;
+    box-shadow: 0px 0px 10px rgba(111, 111, 111, 0.25);
+    border-radius: 10px;
+}
+
+#video-about .section-video-wrap .play-button-wrap img {
+    margin-right: 20px;
 }
 
 #video-about h2 {
     color: #fff;
 }
+
+#video-about .second-container {
+    text-align: center;
+    margin-bottom: 55px;
+}
+
+#video-about .second-container h3 {
+    margin-bottom: 20px;
+    font-size: 18px;
+    line-height: 22px;
+}
+
+#video-about .second-container p {
+    color: #999999;
+    margin-bottom: 30px;
+}
+
+#video-about .second-container .section-content .input-wrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 35px;
+}
+
+#video-about .second-container .section-content .input-wrap input{
+    background: #FFFFFF;
+    border: 1px solid #F2F2F2;
+    box-sizing: border-box;
+    box-shadow: 0px 0px 10px rgba(111, 111, 111, 0.25);
+    border-radius: 30px 0 0 30px;
+    font-size: 13px;
+    line-height: 21px;
+    padding: 15px 45px 15px 33px;
+    width: 40%;
+}
+
+#video-about .second-container .section-content .input-wrap button {
+    padding: 15px 36px 15px 26px;
+    background: #4985FF;
+    box-shadow: 0px 0px 10px rgba(111, 111, 111, 0.25);
+    border-radius: 0px 30px 30px 0px;
+    color: #fff;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    margin: 0;
+    border: 0;
+}
 /*footer*/
+footer {
+    background: #F6F6F8;
+    padding-top: 70px;
+}
+
+footer .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 70px;
+    border-bottom: 1px solid #E0E0E0;
+}
+
+footer .column .title {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 35px;
+}
+
+footer li, footer li a {
+    color: #999999;
+}
+
+footer .list ul {
+    list-style-image: url('./icons/arrow.svg');
+    margin-left: 0;
+    padding-left: 1em;
+}
+
+footer .list li {
+    margin-bottom: 30px;
+}
+
+footer .second-container {
+    padding: 30px 0;
+    text-align: center;
+}
+
+footer .second-container p {
+    color: #999999;
+}
+
+footer .first-list ul {
+    list-style-image: none;
+}
+
+footer .first-list ul li {
+    position: relative;
+}
+footer .first-list ul li a {
+    margin-left: 7px;
+}
+
+footer .first-list ul li.mail:before {
+    content: ' ';
+    position: absolute;
+    background: url('./icons/envelope.svg');
+    width: 15px;
+    height: 15px;
+    top: 2px;
+    left: -15px;
+}
+
+footer .first-list ul li.phone:before {
+    content: ' ';
+    position: absolute;
+    background: url('./icons/call.svg');
+    width: 15px;
+    height: 15px;
+    top: 2px;
+    left: -15px;
+}
+
+footer .first-list ul li.address:before {
+    content: ' ';
+    position: absolute;
+    background: url('./icons/placeholder.svg');
+    width: 15px;
+    height: 15px;
+    top: 2px;
+    left: -15px;
+}
