--- a/assets/style.css
+++ b/assets/style.css
@@ -134,7 +134,7 @@ h3 {
 /*header*/
 header {
     width: 100%;
-    height: 80vh;
+    height: 900px;
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(./img/main-banner.png) no-repeat center;
     background-size: cover;
 }
@@ -180,6 +180,7 @@ ul.header-nav-list li a {
 .banner-title-wrap {
     width: 100%;
     height: calc(100% - 96px);
+    padding: 30px 0;
 }
 
 .banner-title {
@@ -311,6 +312,11 @@ ul.header-nav-list li a {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    flex-flow: row wrap;
+}
+
+.interface-item {
+    margin: 10px;
 }
 
 .interface-item p {
@@ -439,19 +445,20 @@ ul.header-nav-list li a {
     margin-bottom: 70px;
 }
 
-.projects-img {
+#projects .projects-img {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    flex-flow: row wrap;
+    justify-content: center;
     margin-bottom: 50px;
 }
 
-.projects-img .img-item {
+#projects .projects-img .img-item {
     text-align: center;
+    margin: 10px;
 }
 
-.projects-img .img-item img {
-    width: 80%;
+#projects .projects-img .img-item img {
     cursor: pointer;
 }
 
@@ -506,7 +513,18 @@ ul.header-nav-list li a {
     border-radius: 10px;
 }
 
-#video-about .section-video-wrap .play-button-wrap img {
+#video-about .section-video-wrap .play-button-wrap .button-border {
+    display: flex;
+    align-items: center;
+    border: 1px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 200px;
+    padding: 20px 30px 20px 40px;
+}
+
+
+
+#video-about .section-video-wrap .play-button-wrap .button-border img {
     margin-right: 20px;
 }
 
@@ -571,8 +589,13 @@ footer .container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-flow: row wrap;
     padding-bottom: 70px;
     border-bottom: 1px solid #E0E0E0;
+}
+
+footer .container .column {
+    margin: 10px;
 }
 
 footer .column .title {
@@ -647,6 +670,9 @@ footer .first-list ul li.address:before {
 }
 
 @media screen and (max-width: 769px) {
+    header {
+        height: auto;
+    }
     #services .section-title {
         width: 100%;
     }
@@ -657,10 +683,11 @@ footer .first-list ul li.address:before {
         flex-direction: column;
     }
     #services .services .service-item-wrap {
-        width: 65%;
+        width: 100%;
         margin: 0 auto 30px auto;
         align-items: center;
         max-width: 100%;
+        justify-content: start;
     }
     .service-item-description {
         margin-top: 0;
@@ -673,6 +700,12 @@ footer .first-list ul li.address:before {
     }
     .burger-wrapper {
         display: none !important;
+    }
+    #projects .projects-img {
+        justify-content: center;
+    }
+    #projects .projects-img .img-item {
+        margin: 20px;
     }
 }
 
@@ -747,9 +780,12 @@ footer .first-list ul li.address:before {
     /*section Interface*/
     #interface {
         padding-top: 45px;
+        padding-bottom: 45px;
     }
     .interface-content {
         flex-direction: column;
+        padding-bottom: 45px;
+        margin-bottom: 45px;
     }
     .interface-description, .interface-img {
         width: 100%;
@@ -774,6 +810,9 @@ footer .first-list ul li.address:before {
     }
 
     /*section Example*/
+    #example-work {
+        padding-bottom: 45px;
+    }
     #example-work .content {
         padding-top: 45px;
     }
@@ -805,6 +844,16 @@ footer .first-list ul li.address:before {
     #projects {
         padding-top: 45px;
         padding-bottom: 45px;
+    }
+    #projects .projects-img {
+        flex-direction: column;
+        justify-content: center;
+    }
+    #projects .section-title h2 {
+        margin-bottom: 30px;
+    }
+    #projects .section-title p {
+        margin-bottom: 30px;
     }
 
     /*section video-about*/
