--- a/assets/style.css
+++ b/assets/style.css
@@ -519,7 +519,7 @@ ul.header-nav-list li a {
     border: 1px solid #FFFFFF;
     box-sizing: border-box;
     border-radius: 200px;
-    padding: 20px 30px 20px 40px;
+    padding: 20px 40px;
 }
 
 
